objects/APTS_ABB_Integration_Transaction__c.object
<CustomObject>
    <description>Holds transactional data (details like request data, response data, status, etc..) for each webservice invocation</description>
    <fields>
        <fullName>APTS_Data_Statistics__c</fullName>
        <description>Statistics for the data received, e.g., no. of templates created/updated/errored</description>
        <inlineHelpText>Statistics for the data received, e.g., no. of templates created/updated/errored</inlineHelpText>
        <label>Data Statistics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Code_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks upto error code maintained in &apos;Error Code Master&apos; object</description>
        <label>Error Code Master</label>
        <referenceTo>APTS_Error_Code_Master__c</referenceTo>
        <relationshipLabel>Integration Transaction</relationshipLabel>
        <relationshipName>Integration_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Factory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Factory</label>
        <referenceTo>APTS_Factory__c</referenceTo>
        <relationshipLabel>Integration Transactions</relationshipLabel>
        <relationshipName>Integration_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Frame_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to Frame Agreement on which orders and order line items are created through Webservice</description>
        <label>Frame Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Integration Transactions</relationshipLabel>
        <relationshipName>Integration_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Integration_Master__c</fullName>
        <description>Logs transaction messages for each web service invocation tracked under Integration Master</description>
        <label>Integration Master</label>
        <referenceTo>APTS_ABB_Integration_Master__c</referenceTo>
        <relationshipLabel>Integration Transaction</relationshipLabel>
        <relationshipName>Integration_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Item_s__c</fullName>
        <description>Reference to all line items of a quote/proposal</description>
        <label>Line Item(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Transaction__c</fullName>
        <description>To chain failure transactions with initial request</description>
        <label>Parent Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to Quote/Proposal for which web service is invoked</description>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Integration Transaction</relationshipLabel>
        <relationshipName>Integration_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Request_Parameters__c</fullName>
        <description>Parameters sent in request during call out</description>
        <label>Request Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Request_Payload__c</fullName>
        <description>It represents actual request data being sent to target system</description>
        <label>Request Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Request_Timestamp__c</fullName>
        <description>It represents date/time of request sent to target system</description>
        <label>Request Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Response_Parameters__c</fullName>
        <description>Response parameters provided by web service</description>
        <label>Response Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Response_Payload__c</fullName>
        <description>Represents actual response data provided by target system</description>
        <label>Response Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Response_Timestamp__c</fullName>
        <description>Represents date/time when response is received from target system</description>
        <label>Response Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Stack_Trace__c</fullName>
        <description>Represents error text either received as part of response provided by target system or unavailability of service</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User invoking web service</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integration_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Integration Transaction</label>
    <listViews>
        <fullName>customView</fullName>
        <columns>NAME</columns>
        <columns>APTS_Error_Code_Master__c</columns>
        <columns>APTS_Integration_Master__c</columns>
        <columns>APTS_Quote_Proposal__c</columns>
        <columns>APTS_Request_Payload__c</columns>
        <columns>APTS_Request_Timestamp__c</columns>
        <columns>APTS_Response_Payload__c</columns>
        <columns>APTS_Response_Timestamp__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>customView</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ABB-TXN-{0000000000}</displayFormat>
        <label>Integration Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>